--- a/sources/CMakeLists.txt
+++ b/sources/CMakeLists.txt
@@ -1,4 +1,5 @@
 include_directories(${ROOT_PATH}/externals/glm)
+include_directories(${ROOT_PATH}/externals/nlohmann)
 include_directories(${ROOT_PATH}/externals/stbi)
 
 add_subdirectory(anim)
