--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 # CMake entry point
 cmake_minimum_required (VERSION 3.0)
-project(anim)
+project(VertexViewer)
 
 set(ROOT_PATH "${PROJECT_SOURCE_DIR}")
 set(DEPENDENCIES_PATH "${PROJECT_SOURCE_DIR}/externals")
